appId: com.canyougeo.app
name: Android native Back navigation
tags:
  - native
  - back
  - android
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Can you read the world?"
    timeout: 60000
- tapOn: "Play"
- extendedWaitUntil:
    visible: "Choose a game."
    timeout: 15000
- scrollUntilVisible:
    element: "Play Mystery Map"
    direction: DOWN
- tapOn: "Play Mystery Map"
- extendedWaitUntil:
    visible: "Read the unlabeled map"
    timeout: 15000
- pressKey: Back
- extendedWaitUntil:
    visible: "Choose a game."
    timeout: 15000
- tapOn: "Can You Geo? home"
- extendedWaitUntil:
    visible: "Can you read the world?"
    timeout: 60000
- pressKey: Back
- launchApp
- extendedWaitUntil:
    visible: "Can you read the world?"
    timeout: 15000
